--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
             <nav>
                 <ul>
                     <li><a href="{{ site.baseurl }}/">Home</a></li>
-                    <li><a href="{{ site.baseurl }}/pages/activities">Aktivitäten</a></li>
-                    <li><a href="{{ site.baseurl }}/pages/contact">Kontakt</a></li>
+                    <li><a href="{{ site.baseurl }}/activities">Aktivitäten</a></li>
+                    <li><a href="{{ site.baseurl }}/contact">Kontakt</a></li>
                 </ul>
             </nav>
         </div>
