--- a/_layouts/activity.html
+++ b/_layouts/activity.html
@@ -4,5 +4,19 @@ layout: default
 
 <div class="activity">
     <h1>{{ page.title }}</h1>
+    {% if page.title_image %}
+        <div class="title-image">
+            <img src="{{ page.title_image }}" alt="{{ page.title }}">
+        </div>
+    {% endif %}
     {{ content }}
 </div>
+
+<style>
+    .title-image img {
+        width: 100%;
+        height: auto;
+        aspect-ratio: 3 / 2;
+        object-fit: cover;
+    }
+</style>
