--- a/_layouts/activity.html
+++ b/_layouts/activity.html
@@ -17,7 +17,7 @@ layout: default
     
     <div class="activity-info">
         <h2>Eckdaten</h2>
-        <p>Eventtyp: {{ page.event_type }}</p>
+        <p>Aktivität ID: {{ page.activity_id }}</p>
         <p>Startzeit: {{ page.start_time | date: "%a. %d.%m.%Y %H:%M:%S %z" }}</p>
         {% if page.start_location == page.end_location %}
         <p>Start- u. Zielort: {{ page.start_location }}</p>
@@ -26,13 +26,14 @@ layout: default
         <p>Zielort: {{ page.end_location }}</p>
         {% endif %}
         <p>Sportart: {{ page.activity_type }}</p>
+        <p>Eventtyp: {{ page.event_type }}</p>
         <p>Bewegungszeit: {{ page.duration }}</p>
         <p>Distanz: {{ page.distance }} km</p>
         <p>Anstieg: {{ page.elevation_gain }} m</p>
         <p>Abstieg: {{ page.elevation_loss }} m</p>
-        <p><a href="https://connect.garmin.com/modern/activity/{{ page.garmin_id }}">Garmin ID</a></p>
-        <p><a href="https://www.strava.com/activities/{{ page.strava_id }}">Strava ID</a></p>
-        <p><a href="https://www.strava.com/activities/11897140166/export_gpx">Download Link</a> GPX Datei</p>
+        <p>Garmin ID:<a href="https://connect.garmin.com/modern/activity/{{ page.garmin_id }}">{{ page.garmin_id }}</a></p>
+        <p>Strava ID:<a href="https://www.strava.com/activities/{{ page.strava_id }}">{{ page.strava_id }}</a></p>
+        <p>GPX Datei:<a href="https://www.strava.com/activities/11897140166/export_gpx">Download Link</a></p>
     </div>
 
     <div class="description">
