--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }} | {{ site.title }}</title>
     <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
+    <!-- Include Video.js CSS -->
+    <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet" />
+    <!-- Include Video.js JavaScript -->
+    <script src="https://vjs.zencdn.net/7.11.4/video.js"></script>
 </head>
 <body>
     <header>
@@ -24,5 +28,13 @@
             {{ content }}
         </div>
     </main>
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var players = document.querySelectorAll('.video-js');
+        players.forEach(function(player) {
+            videojs(player);
+        });
+    });
+  </script>
 </body>
 </html>
