--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,8 @@ footer {
     max-height: 500px;
     margin: 0 auto;
 }
+
+.vjs-default-skin {
+    max-width: 100%;
+    max-height: 500px;
+    margin: 0 auto;
