--- a/_layouts/activity.html
+++ b/_layouts/activity.html
@@ -53,10 +53,10 @@ layout: default
                 </figure>
             {% elsif media.type == 'video' %}
                 <figure style="text-align: center;">
-                    <video class="video-js vjs-default-skin" controls preload="auto" width="100%" height="auto">
-                        <source src="https://stream.mux.com/{{ media.id }}.m3u8" type="application/x-mpegURL">
-                        Your browser does not support the video tag.
-                    </video>
+<video class="video-js vjs-default-skin" controls preload="auto" width="100%" height="auto" style="max-width: 100%; max-height: 500px; margin: 0 auto;">
+    <source src="https://stream.mux.com/{{ media.id }}.m3u8" type="application/x-mpegURL">
+    Your browser does not support the video tag.
+</video>
                     <figcaption style="text-align: center;">{{ media.description }}</figcaption>
                 </figure>
             {% endif %}
