--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,9 @@ footer {
     max-width: 100%;
     max-height: 500px;
     margin: 0 auto;
+
+.vjs-default-skin.video-js {
+    max-width: 100%;
+    max-height: 500px;
+    margin: 0 auto;
+}
