--- a/_layouts/activity.html
+++ b/_layouts/activity.html
@@ -53,7 +53,7 @@ layout: default
                 </figure>
             {% elsif media.type == 'video' %}
                 <figure style="text-align: center;">
-<video class="video-js vjs-default-skin" controls preload="auto" width="100%" style="max-width: 100%; max-height: 500px; margin: 0 auto;">
+<video class="video-js vjs-default-skin" controls preload="auto" style="max-height: 500px; margin: 0 auto;">
     <source src="https://stream.mux.com/{{ media.id }}.m3u8" type="application/x-mpegURL">
     Your browser does not support the video tag.
 </video>
