--- a/_layouts/activity.html
+++ b/_layouts/activity.html
@@ -57,6 +57,14 @@ layout: default
     <source src="https://stream.mux.com/{{ media.id }}.m3u8" type="application/x-mpegURL">
     Your browser does not support the video tag.
 </video>
+
+<style>
+    .vjs-big-play-button {
+        top: 50% !important;
+        left: 50% !important;
+        transform: translate(-50%, -50%) !important;
+    }
+</style>
                     <figcaption style="text-align: center;">{{ media.description }}</figcaption>
                 </figure>
             {% endif %}
